--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
             "js": [
                 "scripts/content.js"
             ],
+            "css": [
+                "style.css"
+            ],
             "matches": [
                 "https://kvizd.hr/"
             ]
